--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "este un archivo lo hago de prueba",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+
+    "build-css": "node-sass --include-path scss scss/origin.scss css/styles.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
+
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/studiocodigowp/github/issues"
   },
-  "homepage": "https://github.com/studiocodigowp/github#readme"
+  "homepage": "https://github.com/studiocodigowp/github#readme",
+  "devDependencies": {
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.12"
+  }
 }
